# ZASCA

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  H_dev.md  LICENSE  README.md  USER_DOCS.md  api_endpoints.py  conftest.py  opening_system_documentation.md  pyproject.toml  requirements.txt  test_icons.html  trees.txt
.github/workflows/: build-windows-service.yml  collectstatic.yml
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  apps.py  captcha_utils.py  email_service.py  forms.py  forms_admin.py  forms_superadmin.py  geetest_utils.py  models.py  provider_decorators.py  rate_limit.py  signals.py  urls.py  urls_admin.py  urls_admin_groups.py  urls_admin_providers.py  urls_admin_reglinks.py  urls_admin_users.py  urls_provider.py  (+7 more)
config/: __init__.py  celery.py  demo_middleware.py  demo_startup.py  local_lock_middleware.py  security_middleware.py  settings.py  tests.py  urls.py  views.py  wsgi.py
cpp/: main.cpp
docs/: 00_开发规范指南.md  01_项目架构与设计.md  02_API接口文档.md  03_Database_Schema.md  04_部署运维手册.md  05_更新日志.md  06_安全配置指南.md  07_Phase2_前后端代码重构任务书.md  08_Phase2完成报告.md  django_models_guide.md  model_security_and_validation.md  model_testing_guide.md  models_documentation_index.md  plugin_system_models_guide.md
plugins/: README.md  SKILL.md  STRUCTURE.md  __init__.py  admin.py  available_plugins.py  django_integration.py  dynamic_urls.py  forms_admin.py  forms_provider.py  models.py  plugin_manager.py  plugins.toml  signals.py  tests.py  urls.py  urls_admin.py  urls_provider.py  views.py  views_admin.py  views_provider.py
scripts/: deploy.py  tailwind-build.sh
templates/: base.html  maintenance.html
tickets/: admin.py
utils/: __init__.py  disk_quota.py  error_handlers.py  gateway_client.py  helpers.py  local_winserver_client.py  production_checker.py  provider.py  rate_limit.py  redis_helper.py  sensitive_log_filters.py  winrm_client.py
zacs/: LOCAL_DEV.txt  MIGRATION_FIX_GUIDE.md  MIGRATION_REPAIR_INSTRUCTIONS.md  OPERATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  SECURITY_FIX.txt  agent.md  opening_system_documentation.md  requirements.txt  start.bat
(+413 files in other folders)
